# hurrahdb

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example.rs
src/: lib.rs
src/persistance/: aof.rs  mod.rs
