[package]
name = "hurrahdb"
version = "0.1.0"
edition = "2021"
description = "Hurrahdb is an persistent(AOF) inmemory key value store in Rust."
readme = "README.md"
repository = "https://github.com/olimpias/hurrahdb"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/olimpias/hurrahdb"
authors = ["Cem Turker <cemturker92@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }